Fix minor layout problem in pop up form The title and input would be collapsed into one line when previewing in another browser.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     --lightBlue:#79DAE8;
     --lighterBlue:#E8F9FD;
     --headerSize:20vh;
+    --btnWidth:90px;
+    --btnHeight:30px;
 }
 
 body{
@@ -55,7 +57,8 @@ input{
 
 #popUpForm{
     display:grid;
-    grid-template-columns: min-content min-content;
+    grid-template-columns: min-content;
+    grid-auto-rows: min-content;
     border:solid black 2px;
     width:50%;
     height:50%;
@@ -78,8 +81,8 @@ input{
 
 .formBtn{
     margin-top:10px;
-    width:100px;
-    height:30px;
+    width:var(--btnWidth);
+    height:var(--btnHeight);
     background-color: var(--lightBlue);
     color:black;
     z-index:2;
@@ -126,8 +129,8 @@ input{
 
 .readBtn{
     background-color: var(--lightBlue);
-    width:100px;
-    height:30px;
+    width:var(--btnWidth);
+    height:var(--btnHeight);
     color:black;
 }
 
